--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "This is personal study for node.js",
   "main": "index.js",
   "author": "huna <seunghun.chan@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "winston": "^2.4.0"
+  }
 }
