--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "huna <seunghun.chan@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "moment": "^2.20.1",
     "winston": "^2.4.0",
     "winston-daily-rotate-file": "^1.7.2"
   }
