--- a/ExpressExample/package.json
+++ b/ExpressExample/package.json
@@ -5,7 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.2",
-    "express-session": "^1.15.6"
+    "express-error-handler": "^1.1.0",
+    "express-session": "^1.15.6",
+    "multer": "^1.3.0"
   }
 }
